# microsoft-azure-attestation

./: .gitignore  .gitmodules  README.md
intel.sdk.attest.sample/: readme.md
intel.sdk.attest.sample/genquotes/: config.mk
intel.sdk.attest.sample/validatequotes.core/: AttestSgxEnclaveRequestBody.cs  EnclaveInfo.cs  MaaService.cs  Program.cs  runall.sh  validatequotes.core.csproj
maa.jwt.verifier/: .gitignore  CMakeLists.txt  README.md  ubuntu_setup_and_build.sh  win_setup_and_build.ps1
maa.jwt.verifier.dotnet/: Constants.cs  CoseSign1.cs  PathUtilities.cs  Program.cs  SnpAttestationReport.cs  TrustedValues.cs  Utilities.cs  get-sevsnp-jwt.py  maa.jwt.verifier.dotnet.csproj  maa.jwt.verifier.dotnet.sln  readme.md  sev-snp-jwt.txt
maa.jwt.verifier/include/: base64.hpp  context.hpp  curl.hpp  jwks.hpp  jwt.hpp  utils.hpp  x509.hpp
maa.jwt.verifier/src/: base64.cpp  context.cpp  curl.cpp  jwks.cpp  jwt.cpp  main.cpp  utils.cpp  x509.cpp
maa.signing.tool.sample/: Options.cs  Program.cs  maa.signing.tool.csproj  maa.signing.tool.sln  readme.md
maa.signing.tool.sample/Properties/: launchSettings.json
maa.signing.tool.sample/policy/: add.custom.claim.txt  deny.all.txt  permit.secure.boot.txt
maa.signing.tool.sample/utils/: Base64Url.cs  JwtUtils.cs  Tracer.cs
sgx.attest.sample/: .gitignore  README.md  readme.md
sgx.attest.sample.intel.sdk/: readme.md
sgx.attest.sample.intel.sdk/genquotes/: .gitignore  Makefile  config.mk  runall.sh
sgx.attest.sample.intel.sdk/validatequotes.core/: EnclaveInfo.cs  Program.cs  loopit.cmd  runall.cmd  runall.sh  runone.cmd  runone.sh
sgx.attest.sample.oe.sdk/: README.md
sgx.attest.sample.oe.sdk/genquotes/: Makefile  remoteattestation.edl
sgx.attest.sample.oe.sdk/maa.signing.cert.examples/: maa.prod.uks.signing.cert.pem
sgx.attest.sample.oe.sdk/validatequotes.core/: EnclaveInfo.cs  Program.cs  runone.sh  validatequotes.core.csproj
sgx.attest.sample.oe.sdk/validatequotes.net/: EnclaveInfo.cs  MaaQuoteValidator.cs  Program.cs  validatequotes.net.csproj  validatequotes.net.sln
sgx.attest.sample/genquotes/: Makefile  remoteattestation.edl
sgx.attest.sample/validatequotes.core/: AttestOpenEnclaveRequestBody.cs  (+7 more)
(+90 files in other folders)
